tests/NormalTests/paczka1/small_fuzzy/80793279.err
Error in line 1: kEkriV S86 21,8
Error in line 2: kEkriV S608 14,0
